# opencv-testing

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  src.cpp
models/: yolo11n.onnx
